# naoqi

./: .gitignore  ArquitecturaInternaNAO  Dockerfile  README.md  awareness_controller.py  connection.properties  customQRDetection.py  data.csv  disableAwareness.py  geometry.py  head_control.py  head_controller.py  helloWorld.py  landmark.py  locator_and_mapper.py  logger_factory.py  main.py  map_display.py  map_display_adapter.py  motionSample.py  movement_controller.py  nao_properties.py  photo.py  photo_controller.py  photo_saver.py  postures.py  postures_controller.py  qrDetection.py  qr_detector.py  requirements.txt  run.sh  sonar.py  sonar_adapter.py  test.py  video.py  video_controller.py
external_modules/: README.md
external_modules/chat/: run.sh
external_modules/hearing/: build.sh  (+2 more)
gpt_integration_test/: Dockerfile  audio_input_manager.py  build.sh  command_controller.py  main.py  pyproject.toml  python_recording.py  run_api.sh  run_cli.sh  speech_detection.py
gpt_integration_test/audio_modules/: audio_input_manager.py  gpt_interaction_api.py
gpt_integration_test/audio_modules/nao_chat/: README.md  run.sh
gpt_integration_test/audio_modules/nao_chat/nao_chat/: enums.py
gpt_integration_test/audio_modules/nao_chat/nao_chat/chatbots/: information.py  small_talk.py
gpt_integration_test/audio_modules/nao_chat/prompts/: information.txt  smalltalk.txt
gpt_integration_test/nao_chat/: Dockerfile  pyproject.toml  run.sh
gpt_integration_test/nao_chat/examples/: chatbot_class.py  gradio_api.py
gpt_integration_test/nao_chat/nao_chat/: chatbot.py  conversation_pipe.py  helpers.py
gpt_integration_test/nao_chat/nao_chat/chatbots/: art_pieces.py
lts_plans/: lucesAuto.lts  nao_lights.lts
nao_chat/: build.sh  run.sh
planning_for_trivial_game/: planner_automata.py
simple_nao_greeting/: greet_controller.py  plan.txt
slides/: Presentación NAO.pptx
workspace/: connection.properties  nao.properties
(+128 files in other folders)
