[tool.poetry]
name = "audio-transcription-api"
version = "0.1.0"
description = "A FastAPI application to transcribe audio and generate text with GPT-3"
authors = ["tsujovolsky@gmail.com"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
SpeechRecognition = "^3.8.1"
openai = "^0.27.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"